# Study-Helper-RAG

./: README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
app/: app.py
src/: RAGRetriver.py  embedding.py  graph.py  loadDocuments.py  study_assistant.py  vectorstore.py
vector_store/28d2878b-c411-4484-8db3-3116e8de0f6f/: index_metadata.pickle
